unpackaged/main/default/objects/Calendar_Build_Log__c/fields/CB_Batch_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>CB_Batch_Execution_Date__c</fullName>
    <label>CB Batch Execution Date</label>
    <type>DateTime</type>
</CustomField>