unpackaged/main/default/objects/Calendar_Build_Log__c/fields/CB_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>CB_Batch_Status__c</fullName>
    <label>CB Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Batch_Processing_Status</valueSetName>
    </valueSet>
</CustomField>