unpackaged/main/default/objects/Calendar_Build_Log__c/fields/CB_Mobile_Opportunities_Created__c.field-meta.xml
<CustomField>
    <fullName>CB_Mobile_Opportunities_Created__c</fullName>
    <label>CB Mobile Opportunities Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>