unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Corrected_Drive_Count__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Drive_Count__c</fullName>
    <label>Corrected Drive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>