unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Final_State_Drive_Count__c.field-meta.xml
<CustomField>
    <fullName>Final_State_Drive_Count__c</fullName>
    <label>Final State Drive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>