unpackaged/main/default/objects/Calendar_Build_Log__c/fields/FS_Drive_Generation_Count__c.field-meta.xml
<CustomField>
    <fullName>FS_Drive_Generation_Count__c</fullName>
    <label>FS Drive Generation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>