unpackaged/main/default/objects/Calendar_Build_Log__c/fields/FS_Sys_Gen_Batch_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Sys_Gen_Batch_Run_Date__c</fullName>
    <label>FS Sys Gen Batch Run Date</label>
    <type>DateTime</type>
</CustomField>