unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Mobile_Drives_with_Resource_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Drives_with_Resource_Allocation__c</fullName>
    <label>Mobile Drives with Resource Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>