unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Mobile_Sys_Gen_Batch_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Sys_Gen_Batch_Run_Date__c</fullName>
    <label>Mobile Sys Gen Batch Run Date</label>
    <type>DateTime</type>
</CustomField>