unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Mobile_Sys_Gen_Batch_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Sys_Gen_Batch_Run_Status__c</fullName>
    <label>Mobile Sys Gen Batch Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Batch_Processing_Status</valueSetName>
    </valueSet>
</CustomField>