unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Op_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Op_Record_Count__c</fullName>
    <label>Op Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>