unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Status_Correction_Batch_Drive_Count__c.field-meta.xml
<CustomField>
    <fullName>Status_Correction_Batch_Drive_Count__c</fullName>
    <label>Status Correction Batch Drive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>