unpackaged/main/default/objects/Calendar_Build_Log__c/fields/Status_Correction_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Status_Correction_Batch_Status__c</fullName>
    <label>Status Correction Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>