unpackaged/main/default/objects/Calendar_Build_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>CB_Batch_Status__c</columns>
    <columns>Status_Correction_Batch_Status__c</columns>
    <columns>Drive_Gen_Batch_Status__c</columns>
    <columns>FS_Sys_Gen_Batch_Run_Status__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>