unpackaged/main/default/objects/Calendar_Build_Log__c/listViews/Drive_Generation_Batch_Run_Status.listView-meta.xml
<ListView>
    <fullName>Drive_Generation_Batch_Run_Status</fullName>
    <columns>NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>External_Id__c</columns>
    <columns>Drive_Gen_Batch_Status__c</columns>
    <columns>Drive_Gen_Batch_Execution_Date__c</columns>
    <columns>FS_Drive_Generation_Count__c</columns>
    <columns>FS_Drive_Generation_Failure_Count__c</columns>
    <columns>Mobile_Drive_Generation_Count__c</columns>
    <columns>Mobile_Drive_Generation_Failure_Count__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Drive Generation Batch Run Status</label>
</ListView>