unpackaged/main/default/objects/Calendar_Build_Log__c/listViews/July_25_31_CB_Run_Log.listView-meta.xml
<ListView>
    <fullName>July_25_31_CB_Run_Log</fullName>
    <columns>NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>CB_Batch_Status__c</columns>
    <columns>Status_Correction_Batch_Status__c</columns>
    <columns>Drive_Gen_Batch_Status__c</columns>
    <columns>FS_Sys_Gen_Batch_Run_Status__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drive_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/25/2024</value>
    </filters>
    <filters>
        <field>Drive_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>7/31/2024</value>
    </filters>
    <label>July 25-31_2024 CB Run Log</label>
</ListView>