unpackaged/main/default/objects/Calendar_Build_Log__c/listViews/Sys_Gen_Batch_Mobile_Drives_Run_Status.listView-meta.xml
<ListView>
    <fullName>Sys_Gen_Batch_Mobile_Drives_Run_Status</fullName>
    <columns>NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>External_Id__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Status__c</columns>
    <columns>Mobile_Sys_Gen_Batch_Run_Date__c</columns>
    <columns>Mobile_Drives_with_Resource_Allocation__c</columns>
    <columns>Mobile_Drives_wo_Resource_Allocation__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Sys Gen Batch - Mobile Drives Run Status</label>
</ListView>